--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /HelloWorld/nbproject/private/
 /HelloWorld/build/
+/section3/Lab1/nbproject/private/
+/section3/Lab1/build/
+/section2/Hello World/nbproject/private/
+/section2/Hello World/build/
+/section2/Hello World/dist/
