--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /section2/Hello World/nbproject/private/
 /section2/Hello World/build/
 /section2/Hello World/dist/
+/section2/Lab1/build/
+/section2/Lab1/nbproject/private/
