--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /section2/Hello World/dist/
 /section2/Lab1/build/
 /section2/Lab1/nbproject/private/
+/section3/Basic Calculator/nbproject/private/
+/section3/Basic Calculator/dist/
+/section3/Basic Calculator/build/
