--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /section3/Basic Calculator/nbproject/private/
 /section3/Basic Calculator/dist/
 /section3/Basic Calculator/build/
+/section2/Basic Calculator/nbproject/private/
+/section2/Basic Calculator/dist/
+/section2/Basic Calculator/build/
