--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /section2/Basic Calculator/nbproject/private/
 /section2/Basic Calculator/dist/
 /section2/Basic Calculator/build/
+/section3/Student Admission System/nbproject/private/
