lab 3 for section 3

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /section2/Basic Calculator/dist/
 /section2/Basic Calculator/build/
 /section3/Student Admission System/nbproject/private/
+/section3/Lab3/nbproject/private/
+/section3/Lab3/build/
