rational number oop example

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 /section3/Student Admission System/nbproject/private/
 /section3/Lab3/nbproject/private/
 /section3/Lab3/build/
+/section3/Student Admission System/build/
+/section3/Student Admission System/dist/
+/section2/OOP Demo/nbproject/private/
