lab 3 for section 2

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /section3/Student Admission System/build/
 /section3/Student Admission System/dist/
 /section2/OOP Demo/nbproject/private/
+/section2/Lab3/nbproject/private/
+/section2/Lab3/build/
+/section2/Lab3/dist/
