--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /section2/Lab3/nbproject/private/
 /section2/Lab3/build/
 /section2/Lab3/dist/
+/section3/OOP demo/nbproject/private/
+/section3/OOP demo/build/
