rational number for section 2

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /section3/OOP demo/nbproject/private/
 /section3/OOP demo/build/
 /section2/OOP Demo/build/
+/section3/Lab4/nbproject/private/
+/section3/Lab4/build/
