lab 4 for section 2

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /section2/OOP Demo/build/
 /section3/Lab4/nbproject/private/
 /section3/Lab4/build/
+/section2/Lab4/nbproject/private/
+/section2/Lab4/build/
