--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /section3/Lab4/build/
 /section2/Lab4/nbproject/private/
 /section2/Lab4/build/
+/section2/ArrayListDemo/nbproject/private/
+/section2/ArrayListDemo/build/
