Lab 5 for section 2

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@
 /section2/Lab4/build/
 /section2/ArrayListDemo/nbproject/private/
 /section2/ArrayListDemo/build/
+/section2/Lab5/nbproject/private/
+/section2/Lab5/build/
