--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,13 @@
 /section2/ArrayListDemo/build/
 /section2/Lab5/nbproject/private/
 /section2/Lab5/build/
+/section3/ArrayList Demo/nbproject/private/
+/section3/ArrayList Demo/build/
+/section3/Summer2017MTQ4/nbproject/private/
+/section2/MidtermExam/nbproject/private/
+/section2/MidtermExam/build/
+/section2/File IO Demo/nbproject/private/
+/section2/File IO Demo/build/
+/section3/File IO Demo/nbproject/private/
+/section3/File IO Demo/build/
+/section3/File IO Demo/dist/
