file io and assignment 1

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@
 /section3/File IO Demo/nbproject/private/
 /section3/File IO Demo/build/
 /section3/File IO Demo/dist/
+/section3/Assignment 1 Demo/dist/
+/section3/Assignment 1 Demo/build/
