--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@
 /section3/File IO Demo/dist/
 /section3/Assignment 1 Demo/dist/
 /section3/Assignment 1 Demo/build/
+/section2/Assignment 1 Demo/nbproject/private/
+/section2/Assignment 1 Demo/dist/
+/section2/Assignment 1 Demo/build/
