lab 6 for section 2

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@
 /section2/Assignment 1 Demo/nbproject/private/
 /section2/Assignment 1 Demo/dist/
 /section2/Assignment 1 Demo/build/
+/section2/Lab6/nbproject/private/
+/section2/Lab6/dist/
+/section2/Lab6/build/
