--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@
 /section2/Lab6/nbproject/private/
 /section2/Lab6/dist/
 /section2/Lab6/build/
+/section2/DB Console Demo/nbproject/private/
+/section2/DB Console Demo/build/
