--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@
 /section2/Lab6/build/
 /section2/DB Console Demo/nbproject/private/
 /section2/DB Console Demo/build/
+/section3/Database Console Demo/nbproject/private/
+/section3/Database Console Demo/build/
