--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@
 /section2/DB Console Demo/build/
 /section3/Database Console Demo/nbproject/private/
 /section3/Database Console Demo/build/
+/section3/Database GUI Demo/nbproject/private/
+/section3/Database GUI Demo/dist/
+/section3/Database GUI Demo/build/
