--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@
 /section3/Database GUI Demo/nbproject/private/
 /section3/Database GUI Demo/dist/
 /section3/Database GUI Demo/build/
+/section2/DB GUI Demo/nbproject/private/
+/section2/DB GUI Demo/dist/
+/section2/DB GUI Demo/build/
