--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@
 /section2/DB GUI Demo/nbproject/private/
 /section2/DB GUI Demo/dist/
 /section2/DB GUI Demo/build/
+/section2/Lab7/nbproject/private/
+/section2/Lab7/dist/
+/section2/Lab7/build/
