--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@
 /section2/Lab7/nbproject/private/
 /section2/Lab7/dist/
 /section2/Lab7/build/
+/section2/Abstract Classes Demo/nbproject/private/
+/section2/Abstract Classes Demo/build/
