lab 7 for section 3

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@
 /section2/Lab7/build/
 /section2/Abstract Classes Demo/nbproject/private/
 /section2/Abstract Classes Demo/build/
+/section3/Lab7/nbproject/private/
+/section3/Lab7/build/
+/section3/Lab7/dist/
