--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@
 /section3/Lab7/nbproject/private/
 /section3/Lab7/build/
 /section3/Lab7/dist/
+/section2/Paint Application/nbproject/private/
+/section2/Paint Application/build/
+/section2/Paint Application/dist/
