--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@
 /section2/Paint Application/nbproject/private/
 /section2/Paint Application/build/
 /section2/Paint Application/dist/
+/section2/Lab8/nbproject/private/
+/section2/Lab8/build/
+/section2/Lab8/dist/
