--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@
 /section2/Lab8/nbproject/private/
 /section2/Lab8/build/
 /section2/Lab8/dist/
+/section3/Paint Application/nbproject/private/
+/section3/Paint Application/build/
+/section3/Paint Application/dist/
