--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@
 /section3/Paint Application/nbproject/private/
 /section3/Paint Application/build/
 /section3/Paint Application/dist/
+/section2/Chat Application/nbproject/private/
+/section2/Chat Application/build/
