--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@
 /section3/Paint Application/dist/
 /section2/Chat Application/nbproject/private/
 /section2/Chat Application/build/
+/section3/Polymorphism Demo/nbproject/private/
+/section3/Polymorphism Demo/build/
+/section3/Polymorphism Demo/dist/
